[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
description = "Prototype of using crate openidconnect"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-keywords-field
# keywords = ["keyword"]
license = "MIT"
name = "openidconnect-prototype"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/openidconnect-prototype"
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
openidconnect = "3.4.0"
url = "2.5.0"
